refactor: updated font sizes and sizing
* reduced priority of twbp styling

--- a/src/responsive-test.html
+++ b/src/responsive-test.html
@@ -14,24 +14,32 @@
 <body>
 <div class="wrapper">
   <div class="frame">
-    <h2>320 &times; 480 <small>(mobile)</small></h2>
-    <iframe src="http://localhost:8000/" sandbox="allow-same-origin allow-forms allow-scripts" seamless width="320" height="480"></iframe>
+    <h2>360 &times; 800 <small>(xs)</small></h2>
+    <iframe
+      id="frame-2xs"
+      src="http://localhost:8000/"
+      width="360" height="800"
+    ></iframe>
   </div>
   <div class="frame">
-    <h2>480 &times; 640 <small>(small tablet)</small></h2>
-    <iframe src="http://localhost:8000/" sandbox="allow-same-origin allow-forms allow-scripts" seamless width="480" height="640"></iframe>
+    <h2>576 &times; 900 <small>(sm)</small></h2>
+    <iframe src="http://localhost:8000/" sandbox="allow-same-origin allow-forms allow-scripts" width="576" height="900"></iframe>
   </div>
   <div class="frame">
-    <h2>768 &times; 1024 <small>(tablet - portrait)</small></h2>
-    <iframe src="http://localhost:8000/" sandbox="allow-same-origin allow-forms allow-scripts" seamless width="768" height="1024"></iframe>
+    <h2>768 &times; 1024 <small>(md)</small></h2>
+    <iframe src="http://localhost:8000/" sandbox="allow-same-origin allow-forms allow-scripts" width="768" height="1024"></iframe>
   </div>
   <div class="frame">
-    <h2>1024 &times; 768 <small>(tablet - landscape)</small></h2>
-    <iframe src="http://localhost:8000/" sandbox="allow-same-origin allow-forms allow-scripts" seamless width="1024" height="768"></iframe>
+    <h2>992 &times; 1200 <small>(lg)</small></h2>
+    <iframe src="http://localhost:8000/" sandbox="allow-same-origin allow-forms allow-scripts" width="992" height="1200"></iframe>
   </div>
   <div class="frame">
-    <h2>1200 &times; 800 <small>(desktop)</small></h2>
-    <iframe src="http://localhost:8000/" sandbox="allow-same-origin allow-forms allow-scripts" seamless width="1200" height="800"></iframe>
+    <h2>1200 &times; 700 <small>(xl)</small></h2>
+    <iframe src="http://localhost:8000/" sandbox="allow-same-origin allow-forms allow-scripts" width="1200" height="700"></iframe>
+  </div>
+  <div class="frame">
+    <h2>1400 &times; 900 <small>(2xl)</small></h2>
+    <iframe src="http://localhost:8000/" sandbox="allow-same-origin allow-forms allow-scripts" width="1400" height="900"></iframe>
   </div>
 </div>
 </body>
